# newturbovid

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml  supervisord.conf
_plans/: 2026-06-02-aporia-bulk-video-tool.md  2026-06-03-cartoon-mode.md  2026-06-03-robust-sidebar.md  2026-06-04-cartoon-8s-hard-cap.md  2026-06-04-fix-sidebar-500s.md  2026-06-04-local-runner-script.md  2026-06-04-migrate-to-hf-spaces-turso.md  2026-06-04-sensitive-apparel-safeguard-and-per-tab-prompts.md  2026-06-04-sidebar-ux-overhaul.md  2026-06-04-submit-500-defensive-fix.md  2026-06-07-overload-handling-and-template-defaults.md  2026-06-08-200-row-batch-failures.md  2026-06-08-simple-x4-template-3.md  2026-06-08-simple-x4-template-cards.md  2026-06-09-avatar-overlay-size-shape.md  2026-06-09-avatar-static-image-pipeline.md  2026-06-09-libsql-key-column-bug.md  2026-06-09-paste-text-on-img-tab.md  2026-06-09-video-with-avatar-tab.md  2026-06-10-multiscript-text-rendering.md  2026-06-11-kie-body-code-429.md  2026-06-11-resilient-image-download.md  2026-06-11-tiktok-avatar-rate-limit-retry.md  2026-06-14-blank-size-uses-native-image.md  2026-06-14-fast-fail-kill-and-poll-timeout.md  2026-06-14-stuck-processing-rows.md  2026-06-17-submit-500s-turso-resilience.md  2026-06-17-yt-cartoon-tab.md  2026-06-22-engaging-auto-voiceovers-gemini-3.1-tts.md  2026-06-22-simple-motion-tab.md  2026-06-22-worker-turso-reconnect-and-watchdog.md  2026-06-24-libsql-hrana-stream-resilience.md  2026-06-29-pinned-script-open-comments-all-tabs.md  2026-06-30-facebook-tls-fingerprint.md
_spikes/: cartoon_spike.py  live_cartoon_row.py  verify_no_branding.py
apps_script/: AvatarPicker.html  Code.gs  README.md  Sidebar.html  appsscript.json
deploy/: README.md
docker/: Dockerfile  docker-compose.hetzner.yml
docs/: MIGRATE_TO_HF.md
pythonanywhere/: README.md  wsgi_fallback.py
src/bulkvid/: __init__.py  auth.py  config.py  http_download.py  image_ops.py  image_probe.py  logging.py  main.py  step_extractor.py  tunnel.py  url_guard.py  worker.py
tests/: conftest.py
tests/unit/: test_article_fetch.py  test_aspect_resolve.py  test_atlascloud.py  test_auth.py  test_avatar_catalog.py  test_card_renderer.py  test_cartoon_prompt.py  test_cta_defaults.py  test_db_adapter.py  test_gemini_tts.py  test_google_credentials.py  test_headline_gen.py  test_http_download.py  test_image_ops.py  (+47 more)
tools/: README.md  render_card_samples.py  render_labeled_template_previews.py  run_local.py  upload_template_previews.py
(+64 files in other folders)
