[project]
name = "bulkvid"
version = "0.1.0"
description = "TurboVid — Aporia bulk video creation tool for Facebook campaigns"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Yoav (Aporia)", email = "info@flexelent.com" }]

dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",

    # Async HTTP
    "aiohttp>=3.11",
    "httpx>=0.28",

    # Auth
    "python-jose[cryptography]>=3.3",
    "authlib>=1.3",

    # OpenAI + Vertex AI
    "openai>=1.55",
    "google-cloud-aiplatform>=1.74",
    "google-cloud-texttospeech>=2.21",
    "google-genai>=0.3",

    # Storage
    "google-cloud-storage>=2.18",
    "boto3>=1.35",

    # Sheets
    "gspread>=6.1",
    "google-auth>=2.36",

    # Image ops (lifted from refs)
    "Pillow>=11.0",

    # Subtitles / video
    # ffmpeg is OUT of process via Rendi.dev. We do NOT bundle it.

    # Admin panel
    "jinja2>=3.1",
    "python-multipart>=0.0.17",

    # ASGI -> WSGI shim (PythonAnywhere runs the FastAPI app under WSGI)
    "a2wsgi>=1.10",

    # SQLite via stdlib; no driver dep

    # Logging
    "structlog>=24.4",

    # Observability
    "sentry-sdk[fastapi]>=2.18",
    "prometheus-client>=0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "vcrpy>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "respx>=0.21",
]
# Optional extra for deploys that persist state via libSQL/Turso. Kept out
# of the base deps because pre-built wheels don't cover every dev platform
# (e.g. Windows on Python 3.14) and we don't want every contributor to
# need a Rust toolchain. The Docker image installs the extra explicitly.
# Plan: _plans/2026-06-04-migrate-to-hf-spaces-turso.md.
turso = [
    "libsql>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bulkvid"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q --strict-markers"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]   # line length handled by formatter

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
